Fix keyboard latency on mobile

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ html {
 body {
     font: bold 60px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 
-    touch-action: manipulation;
+    touch-action: none;
     -webkit-user-select: none;
     user-select: none;
 }
